# flowforce-education

./: .cursorrules  CLAUDE.md  FlowForce Education API.yaml  README.md  agents.md  models.md  package-lock.json  package.json  vite.config.ts
backend/: .env.example  .gitignore  README.md  build.sh  db-bhv.sqlite3  db-inst.sqlite3  pyproject.toml  render.yaml
backend/config/: settings.py  urls.py
backend/courses/: admin.py  models.py  serializers.py  urls.py  views.py
backend/courses/migrations/: 0001_initial.py  0002_presentation_reader.py  0003_remove_reader_course_and_more.py  0004_remove_material_learning_objectives_and_more.py  0005_remove_material_lesson_remove_material_module_and_more.py
backend/organizations/: README.md  admin.py  models.py  serializers.py  urls.py  views.py
backend/organizations/migrations/: 0001_initial.py
backend/quizzes/: admin.py  models.py  serializers.py  urls.py  views.py
backend/quizzes/management/: __init__.py
backend/quizzes/migrations/: 0001_initial.py  0002_quiz_question_quiz.py  0003_alter_question_options_question_order.py  0004_migrate_to_generic_question.py  0005_migrate_to_generic_question.py  0006_alter_quiz_options_connectoption_height_and_more.py  0007_connectoption_hide_text_connectquestion_hide_text_and_more.py  0008_alter_connectquestion_question_type_and_more.py  0009_remove_connectquestion_learning_objectives_and_more.py  0010_connectoption_connectable.py
backend/students/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/students/migrations/: 0001_initial.py  (+4 more)
frontend/: README.md  (+7 more)
(+52 files in other folders)
